[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://End.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[node name="EndScene" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -397.5
margin_top = -179.5
margin_right = 397.5
margin_bottom = 179.5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="VBoxContainer" parent="Control/VBoxContainer"]
margin_right = 795.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )
mouse_filter = 2

[node name="Best_Time_text_5" type="Label" parent="Control/VBoxContainer/CenterContainer"]
margin_right = 795.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BEST TIME FOR 5:"
align = 1

[node name="best5" type="Label" parent="Control/VBoxContainer/CenterContainer"]
margin_top = 55.0
margin_right = 795.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer3" type="VBoxContainer" parent="Control/VBoxContainer"]
margin_top = 94.0
margin_right = 795.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 90 )
mouse_filter = 2

[node name="Best_Time_text_5" type="Label" parent="Control/VBoxContainer/CenterContainer3"]
margin_right = 795.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BEST TIME FOR 15:"
align = 1

[node name="best15" type="Label" parent="Control/VBoxContainer/CenterContainer3"]
margin_top = 55.0
margin_right = 795.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="VBoxContainer" parent="Control/VBoxContainer"]
margin_top = 188.0
margin_right = 795.0
margin_bottom = 278.0
rect_min_size = Vector2( 0, 90 )
mouse_filter = 2

[node name="Best_Time_text_5" type="Label" parent="Control/VBoxContainer/CenterContainer2"]
margin_right = 795.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BEST TIME FOR 30:"
align = 1

[node name="best30" type="Label" parent="Control/VBoxContainer/CenterContainer2"]
margin_top = 55.0
margin_right = 795.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_top = 282.0
margin_right = 795.0
margin_bottom = 308.0
mouse_filter = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TRY AGAIN?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control/VBoxContainer"]
margin_top = 312.0
margin_right = 795.0
margin_bottom = 338.0
mouse_filter = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MAIN MENU"
align = 1

[node name="Label2" type="Label" parent="Control/VBoxContainer"]
margin_top = 342.0
margin_right = 795.0
margin_bottom = 368.0
mouse_filter = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUIT"
align = 1
[connection signal="gui_input" from="Control/VBoxContainer/Label" to="Control/VBoxContainer" method="_on_Label_gui_input"]
[connection signal="mouse_entered" from="Control/VBoxContainer/Label" to="Control/VBoxContainer" method="_on_Label_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/Label" to="Control/VBoxContainer" method="_on_Label_mouse_exited"]
[connection signal="gui_input" from="Control/VBoxContainer/Label3" to="Control/VBoxContainer" method="_on_Label3_gui_input"]
[connection signal="mouse_entered" from="Control/VBoxContainer/Label3" to="Control/VBoxContainer" method="_on_Label3_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/Label3" to="Control/VBoxContainer" method="_on_Label3_mouse_exited"]
[connection signal="gui_input" from="Control/VBoxContainer/Label2" to="Control/VBoxContainer" method="_on_Label2_gui_input"]
[connection signal="mouse_entered" from="Control/VBoxContainer/Label2" to="Control/VBoxContainer" method="_on_Label2_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/Label2" to="Control/VBoxContainer" method="_on_Label2_mouse_exited"]
